--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    url: jdbc:mysql://localhost:3306/books
+    url: jdbc:mysql://localhost:3306/toy3
     password: '12345'
   thymeleaf:
     prefix: classpath:/templates/
