--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,10 @@ dependencies {
 
 	implementation 'com.google.maps:google-maps-services:0.15.0'
 
+	// Spring Security 추가
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
